# ajnin

./: .gitignore  CMakeLists.txt  README.md  TLexer.g4  TParser.g4  ajnin.vim  an  appveyor.yml  main.cpp  manager.cpp  manager.hpp
cmake/: Coveralls.cmake  CoverallsGenerateGcov.cmake  ExternalAntlr4Cpp.cmake  FindANTLR.cmake
include/: config.h.in  filter.hpp  manager.hpp
indent/: ajnin.vim
man/: ajnin.md  an.md  sanity.md
manager/: aux.cpp  build.cpp  io.cpp  non-build.cpp
syntax/: ajnin.vim
tests/: CMakeLists.txt  assign-2.ajnin  assign.ajnin  assign.ninja  build.ajnin  build.ninja  default.ajnin  default.ninja  env.ajnin  env.ninja  file.ajnin  file.ninja  if.ajnin  if.ninja  include.ajnin  include.ninja  list.ajnin  list.ninja  literal.ajnin  literal.ninja  manip.ajnin  manip.ninja  scope.ajnin  scope.ninja  search.ajnin  search.ninja  space.ajnin  space.ninja  template.ajnin  template.ninja
tests/filter/: slice.ninja  solo.ninja  src.ajnin
tests/src/: list.txt  snippet.ajnin
